# wg_backend

./: .editorconfig  .gitignore  Dockerfile  Pipfile  README.md  Readme.me  alembic.ini  backend_pre_start.py  console.py  default.env  development.uvicorn.sh  docker-compose.yml  gunicorn.prod.sh  gunicorn_conf.py  init_db.py  initial_data.py  nginx.conf  prod.env.toml  prod.gunicorn.sh  pyproject.toml  requirements.txt  sqlite.db  start.sh  test.env  wg.py
alembic/: env.py
alembic/versions/: 07d6c15b1d68_alter_latest_handshake_at_to_last_.py  23423d8032d9_adding_user_model.py  260b57191bbd_test.py  38eaf6939526_changing_everything.py  4ce4773bd545_added_client_columns.py  5243fc566f2c_adding_client_id_secret_and_scope.py  53fcd14befb7_test.py  570529568a71_test.py  598fd40c1a6a_changing_everything.py  6452a81990a1_added_server_colomns.py  739a31ac9beb_adding_interface_model.py  89f12b703932_upgrading_user_mode.py  940e1dc69d68_added_server_colomns.py  a17c01d1c979_added_server_colomns.py  b530cfd2f420_adding_email_and_fullname_to_user_model.py  b8acf935fba7_adding_peer_model.py  c03735fc8b41_add_endpoint_addr_to_peer_model.py  c076e73dc4c1_adding_peer_model.py  ca485ccb4e29_added_tablesasd.py  cd9f58eaa4af_added_server_colomns.py  e16249e7b301_remove_allowedips_columns_from_client_.py  eb3334a19feb_added_client_columns.py
app/: main.py
app/api/: deps.py  exceptions.py  utils.py
app/core/: Settings.py  errors.py  security.py
app/crud/: __init__.py  base.py  crud_client.py  crud_peer.py  crud_user.py  crud_user_fn.py  crud_wgserver.py  wg_server.py
app/db/: base.py  registry.py  session.py
app/models/: __init__.py  client.py  peer.py  user.py  wg_interface.py  wgserver.py
app/schemas/: Peer.py  __init__.py  client.py  config.py  peer.py  token.py  user.py  wg_interface.py  wgserver.py
prod_dir/: gunicorn.service  gunicorn.socket  wg_backend.nginx.conf
wg_backend/: main.py
wg_backend/api/: __init__.py  deps.py  exceptions.py  utils.py
wg_backend/core/: __init__.py  (+3 more)
wg_config/: wg0.conf
(+33 files in other folders)
